--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
   } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
   // ====== PASTE YOUR FIREBASE CONFIG ======
-  const firebaseConfig = {
-    apiKey: "PASTE_ME",
-    authDomain: "PASTE_ME",
-    projectId: "PASTE_ME",
-    storageBucket: "PASTE_ME",
-    messagingSenderId: "PASTE_ME",
-    appId: "PASTE_ME"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyCZxIgiXvpVIA10mbAfXdelZ2GAA8Zc5jQ",
+  authDomain: "peer-feedback-4de63.firebaseapp.com",
+  projectId: "peer-feedback-4de63",
+  storageBucket: "peer-feedback-4de63.firebasestorage.app",
+  messagingSenderId: "977480782634",
+  appId: "1:977480782634:web:2bf3b786ca8ab3d8e4c453"
+};
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
@@ -399,3 +399,4 @@
 </script>
 </body>
 </html>
+
